src/components/styles/Home.css
.home-container .video-container {
  margin-top: 100px;
}

.home-container .video-container iframe {
  width: 680px;
  height: 350px;
  margin: 0 auto;
  display: block;
}

.home-container .donate-button-wrap {
  width: 160px;
  text-align: center;
  position: absolute;
  bottom: 0;
  margin-bottom: 50px;
  display: block;
}

/* 
  ##Device = Tablets, Ipads (portrait)
  ##Screen = B/w 768px to 1024px
*/

@media (min-width: 768px) and (max-width: 1024px) {
  .home-container .video-container {
    margin-top: 100px;
  }
  .home-container .video-container iframe {
    width: 600px;
    height: 400px;
  }
}

/* 
  ##Device = Tablets, Ipads (landscape)
  ##Screen = B/w 768px to 1024px
*/

@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
  .home-container .video-container {
    margin-top: 100px;
  }
  .home-container .video-container iframe {
    margin: 0 auto;
    width: 600px;
    height: 400px;
  }
}

/* iphone X */

@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation:landscape) {
  .home-container .video-container {
    margin-top: 100px;
  }
  .home-container .video-container iframe {
    width: 86vw;
    height: 240px;
  }
  .home-container .donate-button-wrap {
    position: static;
    margin-top: 30px;
  }
}

/* 
  ##Device = Low Resolution Tablets, Mobiles (Landscape)
  ##Screen = B/w 481px to 767px
*/

@media (min-width: 481px) and (max-width: 767px) {
  .home-container .video-container {
    margin-top: 80px;
  }
  .home-container .video-container iframe {
    width: 400px;
    height: 220px;
  }
  .home-container .donate-button-wrap {
    position: static;
    margin-top: 30px;
  }
  .home-container {
    min-height: 100vh;
  }
}

/* 
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/

@media (min-width: 320px) and (max-width: 480px) {
  .home-container .video-container {
    margin-top: 100px;
  }
  .home-container .video-container iframe {
    width: 96vw;
  }
}

